{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 123,
  "lineage": "9bb5f958-c935-3e51-c819-2867d75b88cf",
  "resources": [
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-082b3e67349aa1a69",
            "owner_id": "534539339440",
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2-vpc-igw"
            },
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gatling-instance",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:534539339440:loadbalancer/app/cohns-ops-gatling-us-west-2-alb/3d1a47b2f348a0eb",
            "arn_suffix": "app/cohns-ops-gatling-us-west-2-alb/3d1a47b2f348a0eb",
            "dns_name": "cohns-ops-gatling-us-west-2-alb-284476247.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:534539339440:loadbalancer/app/cohns-ops-gatling-us-west-2-alb/3d1a47b2f348a0eb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cohns-ops-gatling-us-west-2-alb",
            "security_groups": [
              "sg-01587d38c5924998a",
              "sg-0b66ce91388f8a9dd",
              "sg-0beb6a9e6003ff8e2",
              "sg-0e26c18492fed8366"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a1297c0b15096d46"
              },
              {
                "subnet_id": "subnet-0ab792da5a8acc478"
              }
            ],
            "subnets": [
              "subnet-0a1297c0b15096d46",
              "subnet-0ab792da5a8acc478"
            ],
            "tags": {
              "Application": "gatling",
              "Company": "cohns",
              "Environment": "ops",
              "Name": "cohns-ops-us-west-2-gatling-asg"
            },
            "vpc_id": "vpc-0fbaa37a3bf312372",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.app-vpc.aws_security_group.allow_http",
            "module.app-vpc.aws_security_group.allow_https",
            "module.app-vpc.aws_security_group.allow_outbound",
            "module.app-vpc.aws_security_group.allow_ssh",
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gatling-instance",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:534539339440:listener/app/cohns-ops-gatling-us-west-2-alb/3d1a47b2f348a0eb/44981bb7d20d4491",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:534539339440:targetgroup/cohns-ops-gatling-us-west-2-tg/7cb79910ffe99781",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:534539339440:listener/app/cohns-ops-gatling-us-west-2-alb/3d1a47b2f348a0eb/44981bb7d20d4491",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:534539339440:loadbalancer/app/cohns-ops-gatling-us-west-2-alb/3d1a47b2f348a0eb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.app-vpc.aws_security_group.allow_http",
            "module.app-vpc.aws_security_group.allow_outbound",
            "module.app-vpc.aws_security_group.allow_ssh",
            "module.app-vpc.aws_vpc.app-vpc",
            "module.gatling-instance.aws_lb.alb",
            "module.gatling-instance.aws_lb_target_group.alb_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.gatling-instance",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:534539339440:listener/app/cohns-ops-gatling-us-west-2-alb/3d1a47b2f348a0eb/872cdc56252030b9",
            "certificate_arn": "arn:aws:acm:us-west-2:534539339440:certificate/3423c19c-5e0e-4c07-8ece-51c2fda39d25",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:534539339440:targetgroup/cohns-ops-gatling-us-west-2-tg/7cb79910ffe99781",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:534539339440:listener/app/cohns-ops-gatling-us-west-2-alb/3d1a47b2f348a0eb/872cdc56252030b9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:534539339440:loadbalancer/app/cohns-ops-gatling-us-west-2-alb/3d1a47b2f348a0eb",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.app-vpc.aws_security_group.allow_http",
            "module.app-vpc.aws_security_group.allow_https",
            "module.app-vpc.aws_security_group.allow_outbound",
            "module.app-vpc.aws_security_group.allow_ssh",
            "module.app-vpc.aws_vpc.app-vpc",
            "module.gatling-instance.aws_lb.alb",
            "module.gatling-instance.aws_lb_target_group.alb_target_group"
          ]
        }
      ]
    },
    {
      "module": "module.gatling-instance",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:534539339440:targetgroup/cohns-ops-gatling-us-west-2-tg/7cb79910ffe99781",
            "arn_suffix": "targetgroup/cohns-ops-gatling-us-west-2-tg/7cb79910ffe99781",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-299",
                "path": "/php/login.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:534539339440:targetgroup/cohns-ops-gatling-us-west-2-tg/7cb79910ffe99781",
            "lambda_multi_value_headers_enabled": false,
            "name": "cohns-ops-gatling-us-west-2-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 3600,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "peer-route-table",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a25132c0496096fe",
            "owner_id": "534539339440",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2-peer-rtb"
            },
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f9fdd9a0e2b83d33",
            "owner_id": "534539339440",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082b3e67349aa1a69",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Company": "cohns",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2-rtb",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_internet_gateway.default",
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041c495ce2c9e4a02",
            "route_table_id": "rtb-0f9fdd9a0e2b83d33",
            "subnet_id": "subnet-0a1297c0b15096d46"
          },
          "dependencies": [
            "module.app-vpc.aws_internet_gateway.default",
            "module.app-vpc.aws_route_table.r",
            "module.app-vpc.aws_subnet.public_subnet",
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0309a014e06df56fa",
            "route_table_id": "rtb-0f9fdd9a0e2b83d33",
            "subnet_id": "subnet-0ab792da5a8acc478"
          },
          "dependencies": [
            "module.app-vpc.aws_internet_gateway.default",
            "module.app-vpc.aws_route_table.r",
            "module.app-vpc.aws_subnet.public_subnet",
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_flask",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:534539339440:security-group/sg-020d90a970f8b2962",
            "description": "Allow flask inbound traffic for gatling",
            "egress": [],
            "id": "sg-020d90a970f8b2962",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "gatling-allow-flask",
            "name_prefix": null,
            "owner_id": "534539339440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2-flask-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:534539339440:security-group/sg-0b66ce91388f8a9dd",
            "description": "Allow http inbound traffic gatling",
            "egress": [],
            "id": "sg-0b66ce91388f8a9dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gatling-allow-http",
            "name_prefix": null,
            "owner_id": "534539339440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2-http-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:534539339440:security-group/sg-01587d38c5924998a",
            "description": "Allow https inbound traffic gatling",
            "egress": [],
            "id": "sg-01587d38c5924998a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "gatling-allow-https",
            "name_prefix": null,
            "owner_id": "534539339440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2-https-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_mysql",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:534539339440:security-group/sg-08d54b59a36993d42",
            "description": "Allow mysql inbound traffic gatling",
            "egress": [],
            "id": "sg-08d54b59a36993d42",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "gatling-allow-mysql",
            "name_prefix": null,
            "owner_id": "534539339440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2-mysql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_nfs",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:534539339440:security-group/sg-046b7cab2b7bcf4b5",
            "description": "Allow nfs inbound traffic for gatling",
            "egress": [],
            "id": "sg-046b7cab2b7bcf4b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "gatling-allow-nfs",
            "name_prefix": null,
            "owner_id": "534539339440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2-nfs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:534539339440:security-group/sg-0beb6a9e6003ff8e2",
            "description": "Allow outbound traffic for gatling",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0beb6a9e6003ff8e2",
            "ingress": [],
            "name": "gatling-allow-outbound",
            "name_prefix": null,
            "owner_id": "534539339440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2-outbound-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:534539339440:security-group/sg-0e26c18492fed8366",
            "description": "Allow SSH inbound traffic for gatling",
            "egress": [],
            "id": "sg-0e26c18492fed8366",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gatling-allow-ssh",
            "name_prefix": null,
            "owner_id": "534539339440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:534539339440:subnet/subnet-02caf9764ff43fb3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-02caf9764ff43fb3d",
            "map_public_ip_on_launch": false,
            "owner_id": "534539339440",
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2a-prv",
              "SubnetType": "Private"
            },
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:534539339440:subnet/subnet-0c3e3f7c115fa4116",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0c3e3f7c115fa4116",
            "map_public_ip_on_launch": false,
            "owner_id": "534539339440",
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2b-prv",
              "SubnetType": "Private"
            },
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:534539339440:subnet/subnet-0a1297c0b15096d46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-0a1297c0b15096d46",
            "map_public_ip_on_launch": true,
            "owner_id": "534539339440",
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2a-pub",
              "SubnetType": "Public"
            },
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:534539339440:subnet/subnet-0ab792da5a8acc478",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-0ab792da5a8acc478",
            "map_public_ip_on_launch": true,
            "owner_id": "534539339440",
            "tags": {
              "Application": "gatling",
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2b-pub",
              "SubnetType": "Public"
            },
            "vpc_id": "vpc-0fbaa37a3bf312372"
          },
          "dependencies": [
            "module.app-vpc.aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app-vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2::vpc/vpc-0fbaa37a3bf312372",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03fc740837df7f795",
            "default_route_table_id": "rtb-000b310c9b4c1dd52",
            "default_security_group_id": "sg-033b35174d5ad265c",
            "dhcp_options_id": "dopt-5899fc30",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fbaa37a3bf312372",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-000b310c9b4c1dd52",
            "owner_id": "534539339440",
            "tags": {
              "Environment": "ops",
              "Name": "cohns-ops-gatling-us-west-2-vpc",
              "Service": "gatling"
            }
          }
        }
      ]
    },
    {
      "module": "module.app-vpc",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}